kopia/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia 
spec:
  selector:
    matchLabels:
      app: kopia 
  template:
    metadata:
      labels:
        app: kopia 
    spec:
      hostname: pmhoci
      containers:
      - name: kopia 
        image: ghcr.io/pmh-only/kopia:latest
        command:
          - server
          - start
          - --address=0.0.0.0:51515
        volumeMounts:
        - mountPath: /app/config
          name: persistent
          subPath: config
        - mountPath: /app/cache
          name: persistent
          subPath: cache
        - mountPath: /app/logs
          name: persistent
          subPath: logs
        - mountPath: /tmp
          name: persistent
          subPath: tmp
        - mountPath: /data
          name: target
          readOnly: true
      volumes:
      - name: persistent
        persistentVolumeClaim:
          claimName: kopia-pvc
      - name: target
        hostPath:
          path: /mnt/data/
