kopia/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kopia-service
spec:
  selector:
    app: kopia
  ports:
    - protocol: TCP
      port: 51515 
      targetPort: 51515
